--- a/_posts/2016-06-05-诗与岁月同歌.md
+++ b/_posts/2016-06-05-诗与岁月同歌.md
@@ -8,6 +8,13 @@ feature: "assets/img/dobrovnic.jpg"
 comments: true
 ---
 
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-1.jpg"/>
+</div>
+<div style="text-align: center">
+<a title=" " align="center">King's Landing</a>
+</div>
+
 &emsp; &emsp;某天中午独自吃午饭，翻到一篇关于杜布罗夫尼克（Dubrovnik）的文章。被配图中夕阳映照下的拉古萨（Dubrovnik古城区旧称）震撼，想着有一天我也能坐在那个山坡上，静静看着夕阳沉入亚得里亚海，该有多好。
 
 &emsp;&emsp;吃完午饭，就买了一张飞往克罗地亚的机票。
@@ -15,6 +22,11 @@ comments: true
 &emsp;&emsp;抵达杜城已是下午五点，没有像往常那样急着去逛景点和吃东西，而是对比着看到的那张照片，寻找最佳观景点。购买一张通票可以登上城墙和瞭望塔，但日落会被西方的半岛挡住；在山顶上看似乎也不是很理想，因为构图时不可避免会拍到电缆。如此看来，最佳地点在半山腰，但是无奈驾照没有公证，无法租车（所幸租车公司的审查不严，后来租到一辆摩托车）。
 
 &emsp;&emsp;踩好点以后就回到旅店和hostel主人聊天，此行我对克罗地亚产生了很强的好感。在克罗地亚人的真诚和热情中，似乎看到了足球场上长传冲吊的莫德里奇，看到了演奏“克罗地亚狂想曲”的马克西姆。仅凭一知半解就去决定好恶或许显得浅薄，但是作为一个长期处于失语状态的异国人，我对人的眼神和表情十分敏感，喜欢和不喜欢，在一瞬间就能察觉出来。
+
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-2.jpg"/>
+</div>
+
 
 &emsp;&emsp;在海边遇到在萨格勒布读法律的小伙马可，是一个水手的儿子，家在杜城。旅游旺季在这里打工挣钱，攒够学费就回去继续上学。他父亲年轻的时候，正直克罗地亚战争。据说那时候塞尔维亚的飞机天天来扔炸弹，飞机一来，很多渔民冒着枪林弹雨去抢救自己的渔船。他告诉我，10月份以后这里会变得十分萧条，让人压抑。不再有阳光，不再有游客。战乱后的杜城只有旅游业，一旦旅游业停滞，冬天的杜城让人看不到希望。我上网查了一下，过去杜城的人口有5万，战争后的十几年里人口少了1万。到了2011年，老城里住的人只剩下1000多人，而且基本上都是老人。年轻人不得不背井离乡，去寻找更好的生活。
 
@@ -32,25 +44,62 @@ comments: true
 
 &emsp;&emsp;我租到了一辆破旧的摩托车，骑着它飞驰在克罗地亚和波黑两国之间的山上。在雨中的杜城空等了一天，又在日暮的冷风中瑟瑟发抖，但是我认为这一切都值得。艺术评论家苏珊桑塔格说：“照相机发明以来，世界上出现了一种独特的英雄主义：幻象的英雄主义。摄影术允许每个人都展示某种独特的、投入的感受力。摄影家们告别故土，启程去猎取文化、阶级和科学的收获物，寻找震撼人心的形象。通过这种积极的，遥遥在望的、评价性的、无常的幻觉方式，他们要网罗世界，不计病痛和困苦的代价。”
 
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-3.jpg"/>
+</div>
+
+
 &emsp;&emsp;捕捉到了吸引自己前来的画面，可谓不虚此行。从山上回来以后，同宿的两个智利朋友拉着我出去喝酒，我们坐在圣母升天主教座堂前的石阶上喝酒，cheers for the god。他们给我讲圣地亚哥、百内三塔、格雷冰川和马丘比丘，我给他们讲冈仁波齐、札达土林和梅里雪山。让我惊喜的是菲利佩也很喜欢黑塞的《悉达多》，他问了很多我对宗教的看法。若不是语言上有障碍，我一定有很多话想说，弘扬佛法，哈哈哈。
  
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-4.jpg"/>
+</div>
+
+
 &emsp;&emsp;杜城在地理上属于一块“飞地”，从杜城到扎达尔，必须过境波黑。我在去扎达尔的大巴车上睡着了，醒来的时候发现一个波黑的警察在叫我，让我出示居留卡。此时我才意识到我已在波黑境内。过了波黑就是Split，这座城市是克罗地亚一个大型的港口，一个波黑的学妹在Facebook上告诉我一定要去Split，可惜此行我并没有把这个城市作为目的地。
 
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-5.jpg"/>
+</div>
+
 &emsp;&emsp;我很喜欢扎达尔，这里很像大理。大理最美是“风花雪月”：下关风，上关花，苍山雪，洱海月。古城西侧是苍山，东侧是洱海，洱海的东侧是双廊。在双廊看日落是人生一件快事，而扎达尔与之有异曲同工之处。扎达尔的东侧是迪纳拉山脉，西侧则是亚得里亚海，在扎达尔古城所在半岛的西北角，有一个广场叫“致敬太阳”（greeting the sun）。我之所以来扎达尔，是因为一张拍摄在这里的照片。在古城遇到了新加坡国立大学读书的一个小妹妹，她居然是和我看到同一篇文章然后来到这里的，而且和我是同一航班机飞往布鲁塞尔。我请她帮我按下快门，定格住了我在扎达尔日暮时的剪影。
+
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-6.jpg"/>
+</div>
 
 &emsp;&emsp;在等待日落的时候，我一直在拍广场上的人。旅行久了，人的心就容易变软。风景是旅行最初的目的，而遇到的人，则是旅行故事的一切。生活教会人坚强，逼人不得不学会冰冷。但是旅行则让人再次懂得温柔。
 
 &emsp;&emsp;我在Greeting the Sun广场上遇到了一对父子。我为他们拍下了一张日暮中的照片。我想起我的父亲也曾经这样抱着我，父子的背景沉醉在夕阳里。我多希望能回到那个日暮，父亲抱着我，教我说话，看我成长。童年是可以复制的，那就是再创造一个童年。我给那对父子的照片取了个名字：“被海托起的太阳”。我们都曾是别人生命中的太阳，照亮青年时代的父亲的生活，用我们无知并天真的笑容点缀了他们的生命。父亲用海的深沉和宽容接纳了我们。日夜会交替，而我们也会投入时间的海洋，与她融为一体，迎接投入我们怀抱的太阳。
 
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-7.jpg"/>
+</div>
+
 &emsp;&emsp;我在广场上遇到了三胞胎，三个一模一样的十几个月大的婴儿。我想为他们拍张合影，但是有两个男孩像小鸭子一样不停地跑，实在难以捕捉到画面。有一个小婴儿似乎还没怎么学会走路，站在那里看着他的两个兄弟蹒跚。妈妈松开他的手，他吓得不敢动，向妈妈伸开双手。
+
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-8.jpg"/>
+</div>
 
 &emsp;&emsp;我突然替他难过起来：要如何才能让他们三个完全同步的成长，要如何才能让他们三个同时获得一样的爱。世界也是如此，如何才能让每个国家和平？确保每个人在世间获得平等的爱？或许人生来潜意识里都有悲悯的情怀，一旦置于孩童纯真目光的照耀下，便决堤般的泛滥开来。
 
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-9.jpg"/>
+</div>
+
 &emsp;&emsp;从老城回旅店的路上，街上已经没有什么人了。一位父亲带着两个女儿回家，两个小姑娘轮流背着对方；在公交车上，一位母亲怀里的婴儿一直盯着我看，我也盯着他看，然后他咯咯的笑。我在心里对他说：我就要走了，我走了以后，你会以以什么样的方式长大呢？你将来一定会说着我听不懂的语言，去我没去过的城市上学，将来你还会快乐吗？人生之路这么长，坎坷这么多，会有人一直保护你吗？但当我离开这座城市的时候，这个国家的兴亡与否，这个民族的昌盛或苦难，便再也与我无关。
 &emsp;&emsp;我只是个自私的过客。
+
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-10.jpg"/>
+</div>
 
 &emsp;&emsp;很久以前，或许我们都有环游世界的梦想。等我们长大，梦破碎了吗？那些此刻被呵护的孩子，终其一生，也注定会遇到各种坎坷。他们会变得冷漠吗？他们会有怎样的一生？或许，思考这些不过是徒劳，我甚至过不好自己的一生。
 
 &emsp;&emsp;“生活中还要有诗和远方”，早已是陈词滥调。世事艰难，在苦涩成长的岁月里伴着诗歌，又需要多大的勇气。
 
 &emsp;&emsp;希望每个人的心都不会变冷，永远柔软，永远年轻。
+<div style="text-align: center">
+<img src="https://longyintheworld.github.io/wandering/assets/img/160605-11.jpg"/>
+</div>
