--- a/_posts/2016-06-05-诗与岁月同歌.md
+++ b/_posts/2016-06-05-诗与岁月同歌.md
@@ -2,7 +2,7 @@
 layout: post
 title: "诗与岁月同歌：来自冰与火的幻象"
 date: 2016-06-05
-excerpt: " 那时我们有梦，关于文学，关于爱情，关于穿越世界的旅行。如今我们深夜饮酒，杯子碰到一起，都是梦破碎的声音。 ——北岛《波兰来客》"
+excerpt: "&emsp; &emsp;那时我们有梦，关于文学，关于爱情，关于穿越世界的旅行。如今我们深夜饮酒，杯子碰到一起，都是梦破碎的声音。 ——北岛《波兰来客》"
 tags: [游记]
 feature: "assets/img/dobrovnic.jpg"
 comments: true
