--- a/_posts/2016-10-23-呓语.md
+++ b/_posts/2016-10-23-呓语.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "情歌"
+title: "听说爱情回来过"
 date: 2016-06-05
-excerpt: "&emsp; &emsp;朋友给我分享了一首歌，"
+excerpt: "&emsp; &emsp;不知道我们为何要想起往事。但无法否认的是，往事是我们的一部分。敏敏给我分享了一首歌，一首情歌：毛阿敏的《相思》。很久以前听过这首歌，记得那时候还在读初二。很久没有听过情歌了，尤其是中文歌。于是往事历历浮上心头..."
 tags: [日记]
 feature: "assets/img/Screen-1.jpg"
 comments: true
 ---
+&emsp; &emsp;不知道我们为何要想起往事。但无法否认的是，往事是我们的一部分。
 &emsp; &emsp;
 
