--- a/_posts/2016-10-23-呓语.md
+++ b/_posts/2016-10-23-呓语.md
@@ -2,11 +2,15 @@
 layout: post
 title: "听说爱情回来过"
 date: 2016-10-23
-excerpt: "&emsp; &emsp;不知道我们为何要想起往事。但无法否认的是，往事是我们的一部分。敏敏给我分享了一首歌，一首情歌：毛阿敏的《相思》。很久以前听过这首歌，记得那时候还在读初二。蔡依林唱到：“爱是一种需要，一种缺乏，所以我们都喜欢情歌”。于是往事历历浮上心头..."
-tags: [日记]
+excerpt: "&emsp; &emsp;不知道我们为何要想起往事。但无法否认的是，往事是我们的一部分。敏敏学妹给我分享了一首歌，一首情歌：毛阿敏的《相思》。很久以前听过这首歌，记得那时候还在读初二。蔡依林唱到：“爱是一种需要，一种缺乏，所以我们都喜欢情歌”。于是有关情歌的往事，历历浮上心头。"
+tags: [呓语]
 feature: "assets/img/Screen-1.jpg"
 comments: true
 ---
-&emsp; &emsp;不知道我们为何要想起往事。但无法否认的是，往事是我们的一部分。
-&emsp; &emsp;
+&emsp; &emsp;不知道我们为何要想起往事。但无法否认的是，往事是我们的一部分。情歌无非关于爱情，或小题大作，或无病呻吟。大三以后就再也没有听过情歌，后来虽然或多或少也听，但令我惊讶的是，我竟然再也没有记过一首歌的歌词。那个感情细腻的小男孩，似乎在高考以后就停止了生长，而曾经会认真抄写歌词的玻璃心，也随着后来残酷的洗炼被敲打得支离破碎。
+
+
+&emsp; &emsp;情歌，对我来说等同于周杰伦，蔡依林和仙剑奇侠传。甚至去年分手以后，能记得和她一起听过的歌就是刘瑞琦翻唱版的“给我一首歌的时间”。等签证那段时间，有时无聊，趴在桌子上看“手写的从前”MV，这恐怕是我印象中最近的一首情歌。
+
+&emsp; &emsp;想来很有意思，当年那个跟喜欢的姑娘说话都会脸红，现在和姑娘涎皮赖脸开起玩笑来一点儿也不害臊。其实不是自己增长了同异性交往的本领，说心里话而是再也不会像从前那样喜欢一个人了。因为不在乎，所以不患得患失。不在乎那个人的看法，也就不会瞻前顾后，遮遮掩掩。“和羞走，倚门回首，却把青梅嗅”，这样的姑娘怕是再难遇到了吧。
 
