--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -12,5 +12,10 @@ comments: true
 
 &emsp; &emsp;情歌，对我来说等同于周杰伦，蔡依林和仙剑奇侠传。甚至去年分手以后，能记得和她一起听过的歌就是刘瑞琦翻唱版的“给我一首歌的时间”。等签证那段时间，有时无聊，趴在桌子上看“手写的从前”MV，这恐怕是我印象中最近的一首情歌。
 
-&emsp; &emsp;想来很有意思，当年那个跟喜欢的姑娘说话都会脸红，现在和姑娘涎皮赖脸开起玩笑来一点儿也不害臊。其实不是自己增长了同异性交往的本领，说心里话而是再也不会像从前那样喜欢一个人了。因为不在乎，所以不患得患失。不在乎那个人的看法，也就不会瞻前顾后，遮遮掩掩。“和羞走，倚门回首，却把青梅嗅”，这样的姑娘怕是再难遇到了吧。
+&emsp; &emsp;想来很有意思，当年跟喜欢的姑娘说话都会脸红，现在和姑娘涎皮赖脸开起玩笑来一点儿也不害臊。其实不是自己增长了同异性交往的本领，说心里话而是再也不会像从前那样喜欢一个人了。因为不在乎，所以不患得患失。不在乎那个人的看法，也就不会瞻前顾后，遮遮掩掩。“和羞走，倚门回首，却把青梅嗅”，这样的姑娘怕是再难遇到了吧。
+
+&emsp; &emsp;跟往日的自己渐行渐远，很多年前和喜欢的姑娘在一起，恨不得告诉全世界。后来甚至分手以后很多朋友都不曾知道。并不是觉得爱情不值得一提，而是和自己的工作一样，需要认真对待，生怕在人前提起，然后自己做得不好，贻人笑柄。但可笑的事，不知从何时起，我再也没有提过“爱情”这个字眼。“搞对象”，“谈恋爱”，“交往”，“勾搭”，“撩”...用过很多词语，但唯独避开这两个神圣的字。因为它太严肃了，严肃的自己根本无力去正视。而有关“爱情”的经验，则随着情歌被封存在记忆当中。
+
+&emsp; &emsp;很多时候，我们遮遮掩掩，并不想提起往事。或许是因为往事过于沉重，或许是因为自己太过傻逼。对于自己来说，每一段感情都坦坦荡荡，或许自己觉得亏欠，但没有辜负，更遑论欺骗。开开心心得喜欢过一个人，彼此告别，尽管告别得并不潇洒，但很感谢对方当时的陪伴。而回忆，则跟另外一个人没有关系，回忆起来尽是微笑，好似“含饴弄孙”般以过来人的姿态看当年傻乎乎的自己。原来自己也曾纯情过。譬如某个夏夜，路过一个队干部在给一帮小孩训话。训话的干部自己说话都说不清楚，甚至有的是自己带过的孩子，然后底下的小朋友，则一本正经得听着，还煞有介事的模仿。这就叫成长，不在时间和空间里进行比较，衰老的速度，我们自己都不知道。
+
 
