--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -18,6 +18,8 @@ comments: true
 
 &emsp; &emsp;很多时候，我们遮遮掩掩，并不想提起往事。或许是因为往事过于沉重，或许是因为自己太过傻逼。对于自己来说，每一段感情都坦坦荡荡，或许自己觉得亏欠，但没有辜负，更遑论欺骗。开开心心得喜欢过一个人，彼此告别，尽管告别得并不潇洒，但很感谢对方当时的陪伴。而回忆，则跟另外一个人没有关系，回忆起来尽是微笑，好似“含饴弄孙”般以过来人的姿态看当年傻乎乎的自己。原来自己也曾纯情过。譬如某个夏夜，路过一个队干部在给一帮小孩训话。训话的干部自己说话都说不清楚，甚至有的是自己带过的孩子，然后底下的小朋友，则一本正经得听着，还煞有介事的模仿。这就叫成长，不在时间和空间里进行比较，衰老的速度，我们自己都不知道。
 
-&emsp; &emsp;高一的时候，有一次课间，杨老师说不如咱们放首歌吧，课代表刘芳大喊：“借口”。当时我整个人都兴奋起来了，因为这首歌于我来说，曾代表了一个冬天的记忆。周杰伦发布《七里香》的那个暑假，约了班长出来玩。当时暗恋那个姑娘，但是又不敢表白。那个姑娘太过优秀，以自己现在的择偶标准，那时仰望那个姑娘真心觉得她“具有国际视野，有卓越的领导才能和组织能力，语言表达能力强，对新世界有着强烈的渴望”。俨然是我心目中的女神。
+&emsp; &emsp;高一的时候，有一次课间，杨老师说不如咱们放首歌吧，课代表刘芳大喊：“借口”。当时我整个人都兴奋起来了，因为这首歌于我来说，曾代表了一个冬天的记忆。周杰伦发布《七里香》的那个暑假，约了班长出来玩。当时暗恋那个姑娘，但是又不敢表白。那个姑娘太过优秀，以自己现在的择偶标准，那时仰望那个姑娘真心觉得她“具有国际视野，有卓越的领导和组织才能，语言表达能力强，对新世界有着强烈的渴望”。俨然是我心目中的女神。
+
+&emsp; &emsp;正当我信誓旦旦准备向那个姑娘表白的时候，当时比较好的一个小伙子问我，你是不是喜欢她？我害羞得说是啊。他说我也喜欢他，然后问我，我请你喝酒，你能不能让给我，以后咱俩两肋插刀。我大义凛然的答应他了，还帮他写情书....现在想想自己真是天真。
 
 
