--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -20,6 +20,8 @@ comments: true
 
 &emsp; &emsp;高一的时候，有一次课间，杨老师说不如咱们放首歌吧，课代表刘芳大喊：“借口”。当时我整个人都兴奋起来了，因为这首歌于我来说，曾代表了一个冬天的记忆。周杰伦发布《七里香》的那个暑假，约了班长出来玩。当时暗恋那个姑娘，但是又不敢表白。那个姑娘太过优秀，以自己现在的择偶标准，那时仰望那个姑娘真心觉得她“具有国际视野，有卓越的领导和组织才能，语言表达能力强，对新世界有着强烈的渴望”。俨然是我心目中的女神。
 
-&emsp; &emsp;正当我信誓旦旦准备向那个姑娘表白的时候，当时比较好的一个小伙子问我，你是不是喜欢她？我害羞得说是啊。他说我也喜欢他，然后问我，我请你喝酒，你能不能让给我，以后咱俩两肋插刀。我大义凛然的答应他了，还帮他写情书....现在想想自己真是天真。
+&emsp; &emsp;正当我信誓旦旦准备向那个姑娘表白的时候，当时比较要好的一个小伙子问我，你是不是喜欢她？我害羞得说是啊。他说我也喜欢他，然后问我，我请你喝酒，你能不能让给我，以后咱俩两肋插刀。我大义凛然的答应他了，还帮他写情书....现在想想自己真是天真。更傻逼的是，后来那个姑娘似乎还是知道了，我还满不在乎的告诉她，是他喜欢你。
+
+&emsp; &emsp;但我骗不了自己，自己就是喜欢那个姑娘，只不过是太怂了。在接下来的四年里，都在暗恋她。初二的时候不敢追她，因为自己学习成绩差。初三班级调整，和那个姑娘跟开了，内心郁闷的我在学习上一路狂追，最终考上了全省最好的学校。以为一定能和优秀的女神一起出入哪所全省学生仰望的中学，然后携手考入理想大学开创生活走向人生巅峰...然而中考成绩出来以后，女神却落榜了。
 
 
