--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -22,6 +22,10 @@ comments: true
 
 &emsp; &emsp;正当我信誓旦旦准备向那个姑娘表白的时候，当时比较要好的一个小伙子问我，你是不是喜欢她？我害羞得说是啊。他说我也喜欢他，然后问我，我请你喝酒，你能不能让给我，以后咱俩两肋插刀。我大义凛然的答应他了，还帮他写情书....现在想想自己真是天真。更傻逼的是，后来那个姑娘似乎还是知道了，我还满不在乎的告诉她，是他喜欢你。
 
-&emsp; &emsp;但我骗不了自己，自己就是喜欢那个姑娘，只不过是太怂了。在接下来的四年里，都在暗恋她。初二的时候不敢追她，因为自己学习成绩差。初三班级调整，和那个姑娘跟开了，内心郁闷的我在学习上一路狂追，最终考上了全省最好的学校。以为一定能和优秀的女神一起出入哪所全省学生仰望的中学，然后携手考入理想大学开创生活走向人生巅峰...然而中考成绩出来以后，女神却落榜了。
+&emsp; &emsp;但我骗不了自己，自己就是喜欢那个姑娘，只不过是太怂了。在接下来的四年里，都在暗恋她。初二的时候不敢追她，因为自己学习成绩差。初三班级调整，和那个姑娘分开了，内心郁闷的我在学习上一路狂追，最终考上了全省最好的学校。以为一定能和优秀的女神一起出入哪所全省学生仰望的中学，然后携手考入理想大学开创生活走向人生巅峰...然而中考成绩出来以后，女神却落榜了。
+
+&emsp; &emsp;此后的三年里，去她所在的学校找过她几次，每周都给她打电话。在自己学校里恬不知耻的说喜欢的姑娘在另一所学校，但实际上站在她面前，从未开口说过一句“我喜欢你”。其实到现在我都不知道她到底知不知道我喜欢过她思念，从初二到高三。不过现在根本不重要了。我甚至都不记得她长什么样子。唯一记得的就是我那时候对她思念的无以复加，没有非分之想，没有性，没有占有欲。
+
+&emsp; &emsp;也就是周杰伦发布《七里香》的那个夏天，某个晚上，所谓的好哥们告诉我，他只想要得到三样东西：周杰伦的新专辑（磁带），篮球，和她。而我也喜欢周杰伦，我也喜欢她，但是我怂。《七里香》发售以后的第一个冬天，我依然没有买，但是我下载了音质很差的wma，在mp3里听。去铁路另一侧的时候，我会刻意绕远路，从她门前经过，同时也在mp3里听这首歌，那时候mp3里只能存20首歌。终于在一个飘着大雪下午，我从她身旁走过，她穿着红色的羽绒服。
 
 
