--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -26,6 +26,6 @@ comments: true
 
 &emsp; &emsp;此后的三年里，去她所在的学校找过她几次，每周都给她打电话。在自己学校里恬不知耻的说喜欢的姑娘在另一所学校，但实际上站在她面前，从未开口说过一句“我喜欢你”。其实到现在我都不知道她到底知不知道我喜欢过她思念，从初二到高三。不过现在根本不重要了。我甚至都不记得她长什么样子。唯一记得的就是我那时候对她思念的无以复加，没有非分之想，没有性，没有占有欲。
 
-&emsp; &emsp;也就是周杰伦发布《七里香》的那个夏天，某个晚上，所谓的好哥们告诉我，他只想要得到三样东西：周杰伦的新专辑（磁带），篮球，和她。而我也喜欢周杰伦，我也喜欢她，但是我怂。《七里香》发售以后的第一个冬天，我依然没有买，但是我下载了音质很差的wma，在mp3里听。去铁路另一侧的时候，我会刻意绕远路，从她门前经过，同时也在mp3里听这首歌，那时候mp3里只能存20首歌。终于在一个飘着大雪下午，我从她身旁走过，她穿着红色的羽绒服。
+&emsp; &emsp;也就是周杰伦发布《七里香》的那个夏天，某个晚上，所谓的好哥们告诉我，他只想要得到三样东西：周杰伦的新专辑（磁带），篮球，和她。而我也喜欢周杰伦，我也喜欢她，但是我怂。《七里香》发售以后的第一个冬天，我依然没有买，但是我下载了音质很差的wma，在mp3里听。去铁路另一侧的时候，我会刻意绕远路，从她门前经过，同时也在mp3里听这首歌，那时候mp3里只能存20首歌。终于在一个飘着大雪下午，我从她身旁走过，她穿着红色的羽绒服。我假装没有看到她，她却喊了我的名字。可能那一刻我的脸也变红了，但我清楚的记得她的脸是红的。她的脸永远都是红的，她也穿着红色的羽绒服。我摘下耳机的那一刻，正在播放《借口》，而仿佛她叫我名字那一刻的幸福，全部被《借口》的旋律封存了。
 
 
