--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -24,8 +24,16 @@ comments: true
 
 &emsp; &emsp;但我骗不了自己，自己就是喜欢那个姑娘，只不过是太怂了。在接下来的四年里，都在暗恋她。初二的时候不敢追她，因为自己学习成绩差。初三班级调整，和那个姑娘分开了，内心郁闷的我在学习上一路狂追，最终考上了全省最好的学校。以为一定能和优秀的女神一起出入哪所全省学生仰望的中学，然后携手考入理想大学开创生活走向人生巅峰...然而中考成绩出来以后，女神却落榜了。
 
-&emsp; &emsp;此后的三年里，去她所在的学校找过她几次，每周都给她打电话。在自己学校里恬不知耻的说喜欢的姑娘在另一所学校，但实际上站在她面前，从未开口说过一句“我喜欢你”。其实到现在我都不知道她到底知不知道我喜欢过她思念，从初二到高三。不过现在根本不重要了。我甚至都不记得她长什么样子。唯一记得的就是我那时候对她思念的无以复加，没有非分之想，没有性，没有占有欲。
+&emsp; &emsp;此后的三年里，去她所在的学校找过她几次，每周都给她打电话。在自己学校里恬不知耻的说喜欢的姑娘在另一所学校，但实际上站在她面前，从未开口说过一句“我喜欢你”。其实到现在我都不知道她到底知不知道我喜欢过她思念，从初二到高三。不过现在根本不重要了。我甚至都不记得她长什么样子。唯一记得的就是我那时候对她思念的无以复加，没有非分之想。
 
 &emsp; &emsp;也就是周杰伦发布《七里香》的那个夏天，某个晚上，所谓的好哥们告诉我，他只想要得到三样东西：周杰伦的新专辑（磁带），篮球，和她。而我也喜欢周杰伦，我也喜欢她，但是我怂。《七里香》发售以后的第一个冬天，我依然没有买，但是我下载了音质很差的wma，在mp3里听。去铁路另一侧的时候，我会刻意绕远路，从她门前经过，同时也在mp3里听这首歌，那时候mp3里只能存20首歌。终于在一个飘着大雪下午，我从她身旁走过，她穿着红色的羽绒服。我假装没有看到她，她却喊了我的名字。可能那一刻我的脸也变红了，但我清楚的记得她的脸是红的。她的脸永远都是红的，她也穿着红色的羽绒服。我摘下耳机的那一刻，正在播放《借口》，而仿佛她叫我名字那一刻的幸福，全部被《借口》的旋律封存了。
+
+&emsp; &emsp;后来我也听歌，但《七里香》之后，我再也没有记过任何一首歌的歌词。每次听到这首歌，我都能想起漫天大雪里那个红衣少女。
+
+&emsp; &emsp;——————没有感情的分割线——————冷漠的分割线————————
+
+&emsp; &emsp;高中毕业以后，莫名其妙认识了她，于是开始了长达一年半的异地恋。过往种种其实都不记得了，唯一记得的是分手的时候，从影视学院毕业的她去了北京实习。仿佛电影桥段一半，北太平桥，北京电影制片厂，天桥下我等她，吻别。
+
+&emsp; &emsp;从未独自出过远门的我，为了挽救这段从开始就注定要失败的初恋，瞒着家人在凌晨三点赶到了北京。在北京西站遇到了一个黑车司机，利用我对热情的北京人的信任，把我骗进车站地下一层的超市里，拿了一条烟就跑。而我则被老板抓住不放，要收我的钱。我把钱押在店里，出去追那个人，争执中几次想把腰里的匕首拔出来捅他一刀，然而怯于值班亭的民警。我去找民警帮忙，民警不理不睬。好说歹说我骗那个司机，答应给他买一条别的烟，毕竟几百块钱的东西对于大二的孩子来说还是难以承受。
 
 
