--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -36,6 +36,10 @@ comments: true
 
 &emsp; &emsp;高中毕业以后，莫名其妙认识了她，于是开始了长达一年半的异地恋。过往种种其实都不记得了，唯一记得的是分手的时候，从影视学院毕业的她去了北京实习。仿佛电影桥段一半，北太平桥，北京电影制片厂，天桥下我等她，吻别。
 
-&emsp; &emsp;从未独自出过远门的我，为了挽救这段从开始就注定要失败的初恋，瞒着家人在凌晨三点赶到了北京。在北京西站遇到了一个黑车司机，利用我对热情的北京人的信任，把我骗进车站地下一层的超市里，拿了一条烟就跑。而我则被老板抓住不放，要收我的钱。我把钱押在店里，出去追那个人，争执中几次想把腰里的匕首拔出来捅他一刀，然而怯于值班亭的民警。我去找民警帮忙，民警不理不睬。好说歹说我骗那个司机，答应给他买一条别的烟，毕竟几百块钱的东西对于大二的孩子来说还是难以承受。
+&emsp; &emsp;从未独自出过远门的我，为了挽救这段从开始就注定要失败的初恋，瞒着家人在凌晨三点赶到了北京。在北京西站遇到了一个黑车司机，利用我对热情的北京人的信任，把我骗进车站地下一层的超市里，拿了一条烟就跑。而我则被老板抓住不放，要收我的钱。我把钱押在店里，出去追那个人，争执中几次想把腰里的匕首拔出来捅他一刀，然而怯于值班亭的民警。我去找民警帮忙，民警不理不睬。我抓住那个人不放，好说歹说答应给他买一条别的烟，毕竟几百块钱的东西对于大二的孩子来说还是难以承受。
+
+&emsp; &emsp;东西被我骗回来以后，我指着店主大喊，看好东西，我可不给他付钱，我不认识他。司机气急败坏，抓住我到车站外面要打我。我躲在值班亭门口不走，他也不敢轻举妄动。一直到天亮我才敢出来，一出车站就狂奔，跑了三站地才上公交，去她住的地方。上了公交车以后，才发现自己攒了两个月的钱给姑娘买的一条围巾忘在超市收银台了，就这样空着手在心惊胆跳中见到了她。
+
+&emsp; &emsp;她喜欢蔡依林，长得也像蔡依林。我也喜欢蔡依林，从北京回来的路上，一直在听《倒带》。分手后的三个月，我都开心不起来，经常夜里难过的不想睡觉。很感谢那时候白茹芯同志，据他自己称是他追我小妹，被拒绝了，然后我俩每天无痛呻吟。《倒带》那首歌，对我来说形成了记忆强化。
 
 
