--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -40,6 +40,10 @@ comments: true
 
 &emsp; &emsp;东西被我骗回来以后，我指着店主大喊，看好东西，我可不给他付钱，我不认识他。司机气急败坏，抓住我到车站外面要打我。我躲在值班亭门口不走，他也不敢轻举妄动。一直到天亮我才敢出来，一出车站就狂奔，跑了三站地才上公交，去她住的地方。上了公交车以后，才发现自己攒了两个月的钱给姑娘买的一条围巾忘在超市收银台了，就这样空着手在心惊胆跳中见到了她。
 
-&emsp; &emsp;她喜欢蔡依林，长得也像蔡依林。我也喜欢蔡依林，从北京回来的路上，一直在听《倒带》。分手后的三个月，我都开心不起来，经常夜里难过的不想睡觉。很感谢那时候白茹芯同志，据他自己称是他追我小妹，被拒绝了，然后我俩每天无痛呻吟。《倒带》那首歌，对我来说形成了记忆强化。
+&emsp; &emsp;她喜欢蔡依林，长得也像蔡依林。我也喜欢蔡依林，从北京回来的路上，一直在听《倒带》。分手后的三个月，我都开心不起来，经常夜里难过的不想睡觉。很感谢那时候柏鹿欣同志(已婚，化名)，据他自己称，追我小妹被拒绝了，然后我俩每天无痛呻吟。《倒带》那首歌，对我来说形成了记忆强化。以至于两年前在沈阳，我最后一次跟朋友去KTV，除了精忠报国这首歌，我唯一能嗥两句的就是“你累积给的伤害我是真的很难释怀”。
+
+&emsp;&emsp;现在她已经是两个孩子的母亲了。嗯，她是一个好姑娘，从来都是。
+
+&emsp; &emsp;——————没有感情的分割线——————冷漠的分割线————————
 
 
