--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -16,7 +16,7 @@ comments: true
 
 &emsp; &emsp;跟往日的自己渐行渐远，很多年前和喜欢的姑娘在一起，恨不得告诉全世界。后来甚至分手以后很多朋友都不曾知道。并不是觉得爱情不值得一提，而是和自己的工作一样，需要认真对待，生怕在人前提起，然后自己做得不好，贻人笑柄。但可笑的事，不知从何时起，我再也没有提过“爱情”这个字眼。“搞对象”，“谈恋爱”，“交往”，“勾搭”，“撩”...用过很多词语，但唯独避开这两个神圣的字。因为它太严肃了，严肃的自己根本无力去正视。而有关“爱情”的经验，则随着情歌被封存在记忆当中。
 
-&emsp; &emsp;很多时候，我们遮遮掩掩，并不想提起往事。或许是因为往事过于沉重，或许是因为自己太过傻逼。对于自己来说，每一段感情都坦坦荡荡，或许自己觉得亏欠，但没有辜负，更遑论欺骗。开开心心得喜欢过一个人，彼此告别，尽管告别得并不潇洒，但很感谢对方当时的陪伴。而回忆，则跟另外一个人没有关系，回忆起来尽是微笑，好似“含饴弄孙”般以过来人的姿态看当年傻乎乎的自己。原来自己也曾纯情过。譬如某个夏夜，路过一个队干部在给一帮小孩训话。训话的干部自己说话都说不清楚，甚至有的是自己带过的孩子，然后底下的小朋友，则一本正经得听着，还煞有介事的模仿。这就叫成长，不在时间和空间里进行比较，衰老的速度，我们自己都不知道。
+&emsp; &emsp;很多时候，我们遮遮掩掩，并不想提起往事。或许是因为往事过于沉重，或许是因为自己太过傻逼。对于自己来说，每一段感情都坦坦荡荡，或许自己觉得亏欠，但没有辜负，更遑论欺骗。开开心心得喜欢过一个人，彼此告别，尽管告别得并不潇洒，但很感谢对方当时的陪伴。而回忆，则跟另外一个人没有关系，回忆起来尽是微笑，好似“含饴弄孙”般以过来人的姿态看当年傻乎乎的自己。原来自己也曾纯情过。这就叫成长，不在时间和空间里进行比较，衰老的速度，我们自己都不知道。
 
 &emsp; &emsp;——————没有感情的分割线——————冷漠的分割线————————
 
@@ -42,8 +42,9 @@ comments: true
 
 &emsp; &emsp;她喜欢蔡依林，长得也像蔡依林。我也喜欢蔡依林，从北京回来的路上，一直在听《倒带》。分手后的三个月，我都开心不起来，经常夜里难过的不想睡觉。很感谢那时候柏鹿欣同志(已婚，化名)，据他自己称，追我小妹被拒绝了，然后我俩每天无痛呻吟。《倒带》那首歌，对我来说形成了记忆强化。以至于两年前在沈阳，我最后一次跟朋友去KTV，除了精忠报国这首歌，我唯一能嗥两句的就是“你累积给的伤害我是真的很难释怀”。
 
-&emsp;&emsp;现在她已经是两个孩子的母亲了。嗯，她是一个好姑娘，从来都是。
+&emsp;&emsp;北京一别，再也没有见过面。她大婚之前，还问我要不要去参加她的婚礼。显然不去。现在她好像已经是两个孩子的母亲了，偶尔想起来了去她的社交账号上看一眼。嗯，她是一个好姑娘，从来都是。而我终于也“终于看开爱回不来我们面前太多阻碍”。
 
 &emsp; &emsp;——————没有感情的分割线——————冷漠的分割线————————
 
+&emsp; &emsp;大学毕业去考驾校，遇到她的时候，她正蹲在地上哭。特别漂亮的一个姑娘，哭红了眼，相信任何人都忍不住过去哄一下。后来别人戏称她是我的“驾校情缘”。那时候刚读研究生
 
