--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -46,5 +46,9 @@ comments: true
 
 &emsp; &emsp;——————没有感情的分割线——————冷漠的分割线————————
 
-&emsp; &emsp;大学毕业去考驾校，遇到她的时候，她正蹲在地上哭。特别漂亮的一个姑娘，哭红了眼，相信任何人都忍不住过去哄一下。后来别人戏称她是我的“驾校情缘”。那时候刚读研究生
+&emsp; &emsp;她用唱吧发给我她唱的《漂洋过海来看你》，让我听《易燃易爆炸》。她爱民谣，去听蔡健雅，听夜空中最亮的星，听李荣浩...她让我去听的歌，那时候都没有认真听；让我去看的电影，其实我也没用去看。在国外突然有一天，自己一个人把她给我听的歌仔细听了一遍，发现原来当时她让我听的歌很不错，然后自己把她提起来很多次的《黑天鹅》看完了。然而再也没有人问我这首歌好听不好听了。
+&emsp; &emsp;独自听《远辰》，听《走马》，走了很远的路。很开心。交集太多，还是聊聊天气什么的吧～
+
+&emsp; &emsp;情歌，从《爱上张无忌》到《独占神话》，《六月的雨》，《倒带》，《给我一首歌的时间》。所谓情歌，和歌无关。相关的是谁和你一起听过这些歌，你听这些歌的时候遇到了谁。
+&emsp; &emsp;恐怕再也不会记住什么情歌了，人的成长，只有一次。
 
