--- a/_posts/2016-10-23-yiyu.md
+++ b/_posts/2016-10-23-yiyu.md
@@ -50,5 +50,6 @@ comments: true
 &emsp; &emsp;独自听《远辰》，听《走马》，走了很远的路。很开心。交集太多，还是聊聊天气什么的吧～
 
 &emsp; &emsp;情歌，从《爱上张无忌》到《独占神话》，《六月的雨》，《倒带》，《给我一首歌的时间》。所谓情歌，和歌无关。相关的是谁和你一起听过这些歌，你听这些歌的时候遇到了谁。
-&emsp; &emsp;恐怕再也不会记住什么情歌了，人的成长，只有一次。
+
+&emsp; &emsp;恐怕再也不会记住什么情歌了。因为人的成长，只有一次。
 
